--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,17 @@
-<html>
-    <head>
-        <title>Shuvo's blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Learning Django</a></h1>
-        </div>
+{% extends 'blog/base.html' %}
 
-        <div>
-            <p>published: 9/8/2020 </p>
-            <h2><a href="">My first post</a></h2>
-            <p>Hello World!</p>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
+    {% endfor %}
+{% endblock %}
 
-        <div>
-            <p>published: 9/8/2020 </p>
-            <h2><a href="">My second post</a></h2>
-            <p>Hope to get better at HTML</p>
-        </div>
-    </body>
-</html>
+
+
+
