Included the links to solutions.

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,7 +14,7 @@
             {% endif %}
             <h1><a href="/">Codeforces Editorials</a></h1>
         </div>
-
+        
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
@@ -22,5 +22,13 @@
                 {% endblock %}
             </div>
         </div>
+
+        <div class="content container">
+            <h1>Link To Solutions</h1>
+            <a href="https://codeforces.com/contest/1392/submission/90202787">Omkar and duck</a>
+            <br><a href="https://codeforces.com/contest/1409/submission/91931808">Two Platforms</a>
+            <br><a href="https://codeforces.com/contest/1399/submission/89317641">Weights Division(Easy Version)</a>
+        </div>
+        
     </body>
 </html>
